--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   otp_text_field: ^1.1.3
+  badges: ^2.0.3
 
 
 dev_dependencies:
