--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   otp_text_field: ^1.1.3
   badges: ^2.0.3
+  cloud_firestore: ^3.4.8
+  firebase_auth: ^3.9.0
+  fluttertoast: ^8.0.9
+  firebase_core: ^1.22.0
 
 
 dev_dependencies:
