--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   firebase_auth: ^3.9.0
   fluttertoast: ^8.0.9
   firebase_core: ^1.22.0
+  firebase_messaging: ^13.0.3
+  http: ^0.13.5
+  flutter_local_notifications: ^11.0.0
+  rxdart: ^0.27.5
 
 
 dev_dependencies:
