--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   http: ^0.13.5
   flutter_local_notifications: ^11.0.0
   rxdart: ^0.27.5
+  firebase_dynamic_links: ^4.3.9
+  url_launcher: ^6.1.6
 
 
 dev_dependencies:
