--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -33,9 +33,11 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
+
                 <data
                     android:scheme="https"
-                    android:host="tyreplex.page.link" />
+                    android:host="tyreplex.page.link"
+                    android:path ="/myOrdersPage"/>
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
